<resources>
<string name="app_name">iTravel</string>
    <string name="imageUploadBtn">Upload an image</string>
    <string name="newImage">Insert a new image</string>
    <string name="locationName">Location Name</string>
    <string name="fillLocationName">Name of the location</string>
    <string name="country">Country</string>
    <string name="fillCountry">Name of the country</string>
    <string name="description">Description</string>
    <string name="fillDescription">Description</string>
    <string name="locationLink">Location Link</string>
    <string name="fillLocationLink">Link of the location</string>
    <string name="MsgAddLocation">Add a Location</string>
    <string name="addLocationBtn">Add Location</string>
    <string name="MsgUpdateLocation">Update a Location</string>
    <string name="updateLocationBtn">Update Location</string>
    <string name="MsgDeleteLocation">Delete a Location</string>
    <string name="deleteLocationBtn">Delete Location</string>
    <string name="hotelName">Hotel Name</string>
    <string name="fillHotelName">Name of the hotel</string>
    <string name="MsgAddHotel">Add a Hotel</string>
    <string name="addHotelBtn">Add Hotel</string>
    <string name="MsgUpdateHotel">Update a Hotel</string>
    <string name="updateHotelBtn">Update Hotel</string>
    <string name="MsgDeleteHotel">Delete a Hotel</string>
    <string name="deleteHotelBtn">Delete Hotel</string>
</resources>
